--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,112 @@
+/* fonts */
 body {
     font-family: 'Roboto', sans-serif;
 }
 
+.header-name, .section-heading, .footer-heading {
+    font-family: 'Exo', sans-serif;
+    font-weight: 300;
+}
+
+/* header */
 .rosie-logo {
     background: url("../images/rosie.jpg") center / cover no-repeat;
     min-height: 360px;
     transition: all 0.5s ease-in-out;
+}
+.header-text {
+    margin-left: 50px;
+    height: 240px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.header-title {
+    font-size: 1.5rem;
+    font-weight: 200;
+}
+/* navbar */
+.menu-item span {
+    font-weight: 300;
+    letter-spacing: 2px;
+    width: 100%;
+
+}
+.menu-item {
+    width: 100%;
+    height: 120px;
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.menu-item a {
+    color: white;
+    width: 100%;
+    text-decoration: none;
+}
+.menu-item i {
+    font-size: 26px;
+    margin-bottom: 5px;
+}
+.hvr-sweep-to-bottom:before {
+    background: rgba(0, 0, 0, 0.2);
+    height: 120px;
+}
+
+/* background color */
+.bgcolor__header {
+    background-color: #676767;
+}
+.bgcolor__menuitem--home {
+    background-color: #e67e22;
+}
+.bgcolor__menuitem--resume {
+    background-color: #9b59b6;
+}
+.bgcolor__menuitem--contact {
+    background-color: #3498db;
+}
+.bgcolor__menuitem--download {
+    background-color: #525252;
+}
+.bgcolor__personalinfo {
+    background-color: #f4f4f4;
+}
+footer {
+    background-color: #525252;
+    padding: 1.5rem;
+}
+/* headings */
+
+
+/* icons */
+.about-me i {
+    color: #e67e22;
+    font-size: 28px;
+}
+.cv-download i {
+    font-size: 18px;
+    margin-left: 5px;
+    color: white;
+}
+.cv-download i:hover {
+    color: #e67e22;
+    transition: color 0.35s ease-in-out;
+}
+.social-links i {
+    color: white;
+    background-color: #8f8f8f;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    padding: 12px 0;
+    text-align: center;
+    line-height: 7px;
+}
+.social-links i:hover {
+    background-color: #e67e22;
+    transition: background-color 0.35s ease-in-out;
 }
