--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ body {
     min-height: 360px;
     transition: all 0.5s ease-in-out;
 }
+
 .header-text {
     margin-left: 50px;
     height: 240px;
@@ -21,16 +22,19 @@ body {
     flex-direction: column;
     justify-content: center;
 }
+
 .header-title {
     font-size: 1.5rem;
     font-weight: 200;
 }
+
 /* navbar */
 .menu-item span {
     font-weight: 300;
     letter-spacing: 2px;
     width: 100%;
 }
+
 .menu-item {
     width: 100%;
     height: 120px;
@@ -41,15 +45,18 @@ body {
     align-items: center;
     justify-content: center;
 }
+
 .menu-item a {
     color: white;
     width: 100%;
     text-decoration: none;
 }
+
 .menu-item i {
     font-size: 26px;
     margin-bottom: 5px;
 }
+
 .hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
@@ -59,23 +66,42 @@ body {
 .bgcolor__header {
     background-color: #676767;
 }
+
 .bgcolor__menuitem--home {
     background-color: #e67e22;
 }
+
 .bgcolor__menuitem--resume {
     background-color: #9b59b6;
 }
+
+.bgcolor__menuitem--interests {
+    background-color: #e74c3c;
+}
+
+.bgcolor__menuitem--github {
+    background-color: #1c4a6c;
+}
+
 .bgcolor__menuitem--contact {
     background-color: #3498db;
 }
+
 .bgcolor__menuitem--download {
     background-color: #525252;
 }
-.bgcolor__personalinfo {
+
+.bgcolor__personalinfo,
+.bg-color-conferences {
     background-color: #f4f4f4;
 }
+
 .bgcolor__workhistory {
     background-color: #9b59b6;
+}
+
+.bg-color-groups {
+    background-color: #ffffff;
 }
 footer {
     background-color: #525252;
@@ -88,6 +114,11 @@ footer {
     color: #e67e22;
     font-size: 28px;
 }
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
 .cv-download i {
     font-size: 18px;
     margin-left: 5px;
@@ -163,4 +194,22 @@ footer {
     background-color: #e84610;
     border-color: #6c757d;
     margin-top: 1rem;
+}
+
+/* Form */
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    background-color: #e84610;
+    color: #fafafa;
+}
+
+/* Map */
+div#map {
+    min-height: 360px;
 }
